Style fixes for dark mode

--- a/src/componentes/inputs/normal-input.styles.scss
+++ b/src/componentes/inputs/normal-input.styles.scss
@@ -32,6 +32,7 @@
         background-color: rgba(var(--color-card));
         font-size: 16px;
         border-radius: 5px;
+        color: rgba(var(--color-text-primary));
 
         &:focus {
             border: none;
