--- a/src/componentes/overlay-box/overlaybox.styles.scss
+++ b/src/componentes/overlay-box/overlaybox.styles.scss
@@ -23,6 +23,7 @@
 
     .box-title {
         margin-bottom: 20px;
+        color: rgb(var(--color-text-primary));
     }
     .buttons {
         display: flex;
