--- a/src/componentes/welcome/welcome.styles.scss
+++ b/src/componentes/welcome/welcome.styles.scss
@@ -38,6 +38,7 @@
             background-color: rgb(var(--color-pending));
             color: white;
             font-weight: bold;
+            border: none;
             font-size: 15px;
             border-radius: 3px;
 
